record jump fix

--- a/zen_garden-main/zen_garden/scss/partials/_desktop-view.scss
+++ b/zen_garden-main/zen_garden/scss/partials/_desktop-view.scss
@@ -211,7 +211,7 @@
       "zen-resources";
     grid-area: wrapper;
     position: static;
-    padding-top: 5rem;
+    margin-top: 5rem;
     width: 100%;
     &:hover{
       //transform: scale(1.01) translateX(0px);
